--- a/pre-assessment/assets/css/screen.css
+++ b/pre-assessment/assets/css/screen.css
@@ -41,7 +41,7 @@ h4{
 	color: #df2a2a;
 }
 
-.button{
+.button a{
   background-color: rgb(216, 124, 44);
   border: none;
   color: white;
@@ -51,9 +51,10 @@ h4{
   text-decoration: none;
   cursor: pointer;
   font-size: 16px;
+  display: block;
 }
 
-.button:hover{
+.button a:hover{
 	background-color: #df2a2a;
 	border: none;
 	color: white;
