--- a/final-site/assets/style/style.css
+++ b/final-site/assets/style/style.css
@@ -1,25 +1,25 @@
-/* Reset Styles */
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
   
-  /* Global Styles */
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.5;
     color: #333;
     background-color: #f7f7f7;
   }
   
   header {
-    background-color: #1c1c1c;
-    color: #fff;
+    background-color: #8bc57e;
+    color: #474747;
     padding: 20px;
   }
   
   header h1 {
+    font-family: 'Calistoga';
     margin: 0;
     font-size: 36px;
   }
@@ -31,10 +31,12 @@
   }
   
   nav li {
+    font-family: 'Open Sans', sans-serif;
     display: inline-block;
   }
   
   nav a {
+    
     display: block;
     padding: 10px 20px;
     color: #fff;
@@ -58,6 +60,7 @@
   section h2 {
     margin-bottom: 20px;
     font-size: 24px;
+    font-family: 'Calistoga';
   }
   
   section ul {
@@ -73,6 +76,7 @@
   section h3 {
     margin-bottom: 10px;
     font-size: 20px;
+    font-family: 'Calistoga';
   }
   
   section img {
@@ -84,6 +88,14 @@
   section p {
     margin-bottom: 10px;
     font-size: 16px;
+  }
+
+  ul li h3 a {
+    color: #45a049;
+  }
+
+  ul li h3 a:hover {
+    color: #102f12;
   }
   
   footer {
